--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+# Ignore audio and video files
+*.mp3
+*.wav
+*.mp4
+
+# Ensure outputs/uploads directories remain tracked without their contents
+scripts/data/uploads/*
+scripts/data/outputs/*
+!scripts/data/uploads/.gitkeep
+!scripts/data/outputs/.gitkeep
+
